[package]
name = "resumable_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
thiserror = "1"
futures = "0.3"
regex = "1"
crossterm = "0.29"
lazy_static = "1.5.0"
fs2 = "0.4"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
md5 = "0.7"
